# partialzip

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  appveyor.yml
.github/: dependabot.yaml
.github/workflows/: cargo_audit.yml  docker_hub.yml  msrv.yml  rust.yml
benches/: pz_benchmark.rs
src/: lib.rs  partzip.rs  tests.rs  utils.rs
tests/: cli.rs
