[package]
authors = ["marcograss"]
categories = ["command-line-utilities", "compression", "encoding", "parsing", "parser-implementations"]
default-run = "partialzip"
description = "Download single files from online zip archives or list the content"
documentation = "https://docs.rs/partialzip"
edition = "2021"
exclude = ["/testdata", "/.cargo"]
homepage = "https://github.com/marcograss/partialzip"
keywords = ["network", "utility", "io", "tool", "library"]
license = "MPL-2.0"
name = "partialzip"
readme = "README.md"
repository = "https://github.com/marcograss/partialzip"
rust-version = "1.77.2"
version = "3.4.1"

[features]
cmdline = ["dep:anyhow", "dep:clap", "dep:env_logger"]
default = ["cmdline", "progressbar"]
progressbar = ["dep:indicatif"]
rustls = ["curl/rustls"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "partialzip"
path = "src/bin/partialzip.rs"
required-features = ["cmdline"]

[[bench]]
harness = false
name = "pz_benchmark"

[dependencies]
anyhow = {version = "1.0.86", optional = true}
bytesize = "1.3.0"
clap = {version = "4.5.9", features = ["derive"], optional = true}
conv = "0.3.3"
curl = {version = "0.4.46", default-features = false}
env_logger = {version = "0.11.3", optional = true}
indicatif = {version = "0.17.8", optional = true}
log = "0.4.22"
num-traits = "0.2.19"
thiserror = "1.0.62"
url = "2.5.2"
zip = {version = "2.1.3", default-features = false, features = ["bzip2", "deflate", "zstd"]}

[dev-dependencies]
actix-files = "0.6.6"
actix-web = {version = "4.8.0", default-features = false, features = []}
anyhow = "1.0.86"
assert_cmd = "2.0.14"
criterion = "0.5.1"
predicates = "3.1.0"
tempfile = "3.10.1"
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread"]}
