[package]
authors = ["marcograss"]
categories = ["command-line-utilities", "compression", "encoding", "parsing", "parser-implementations"]
default-run = "partialzip"
description = "Download single files from online zip archives or list the content"
documentation = "https://docs.rs/partialzip"
edition = "2021"
exclude = ["/testdata", "/.cargo"]
homepage = "https://github.com/marcograss/partialzip"
keywords = ["network", "utility", "io", "tool", "library"]
license = "MPL-2.0"
name = "partialzip"
readme = "README.md"
repository = "https://github.com/marcograss/partialzip"
rust-version = "1.81.0"
version = "5.0.0"

[features]
cmdline = ["dep:anyhow", "dep:clap", "dep:env_logger"]
default = ["cmdline", "progressbar"]
progressbar = ["dep:indicatif"]
rustls = ["curl/rustls"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "partialzip"
path = "src/bin/partialzip.rs"
required-features = ["cmdline"]

[[bench]]
harness = false
name = "pz_benchmark"

[dependencies]
anyhow = {version = "1.0.98", optional = true}
bytesize = "2.0.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = {version = "4.5.36", features = ["derive"], optional = true}
conv = "0.3.3"
curl = {version = "0.4.47", default-features = false}
env_logger = {version = "0.11.8", optional = true}
indicatif = {version = "0.17.11", optional = true}
log = "0.4.27"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
url = "2.5.4"
zip = {version = "1", default-features = false, features = ["bzip2", "deflate", "zstd"]}

[dev-dependencies]
actix-files = "0.6.6"
actix-web = {version = "4.10.2", default-features = false, features = []}
anyhow = "1.0.98"
assert_cmd = "2.0.16"
criterion = "0.5.1"
predicates = "3.1.3"
tempfile = "3.19.1"
tokio = {version = "1.44.2", features = ["macros", "rt-multi-thread"]}
