[package]
authors = ["marcograss"]
categories = ["command-line-utilities", "compression", "encoding", "parsing", "parser-implementations"]
default-run = "partialzip"
description = "Download single files from online zip archives or list the content"
documentation = "https://docs.rs/partialzip"
edition = "2021"
exclude = ["/testdata", "/.cargo"]
homepage = "https://github.com/marcograss/partialzip"
keywords = ["network", "utility", "io", "tool", "library"]
license = "MPL-2.0"
name = "partialzip"
readme = "README.md"
repository = "https://github.com/marcograss/partialzip"
rust-version = "1.83.0"
version = "6.0.0"

[features]
cmdline = ["dep:anyhow", "dep:clap", "dep:env_logger"]
default = ["cmdline", "progressbar"]
progressbar = ["dep:indicatif"]
rustls = ["curl/rustls"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "partialzip"
path = "src/bin/partialzip.rs"
required-features = ["cmdline"]

[[bench]]
harness = false
name = "pz_benchmark"

[dependencies]
anyhow = {version = "1.0.100", optional = true}
bytesize = "2.3.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = {version = "4.5.54", features = ["derive"], optional = true}
conv = "0.3.3"
curl = {version = "0.4.49", default-features = false}
env_logger = {version = "0.11.8", optional = true}
indicatif = {version = "0.18.3", optional = true}
log = "0.4.29"
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.8"
zip = {version = "7", default-features = false, features = ["bzip2", "deflate", "zstd"]}

[dev-dependencies]
actix-files = "0.6.9"
actix-web = {version = "4.12.1", default-features = false, features = []}
anyhow = "1.0.100"
assert_cmd = "2.1.2"
criterion = "0.7.0"
predicates = "3.1.3"
tempfile = "3.24.0"
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
